# LUMI-Project-Template

./: .gitignore  README.md  environment.yml  pyproject.toml
container_wrapper_example/: README.md  create_environment.sh  post_install.sh  run.sh
pytorch_example/: run.py
slurm_tools/: create_environment.sh  run.sh
