[project]
name = "pytorch_example"
version = "0.1"
description = ""
readme = ""
requires-python = ">=3.8"
dependencies = [
    # Add any dependencies here
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pytorch_example"]
exclude = []

[project.scripts]
# Add any console scripts here